--- a/css/style.css
+++ b/css/style.css
@@ -65,14 +65,20 @@ body {
         position:fixed;
         left:0px;
     }
-    .header-1
+    .line
     {
-
+        height:3px;
+        width:100%;
     }
+    .header-1-info img {
+        height: 15px;
+        margin:5px;
+      }
     .header-1-info
     {
         flex-direction:column;
         gap:0px;
+        
         font-size:10px;
     }
     .header-2 {
