--- a/css/home.css
+++ b/css/home.css
@@ -60,6 +60,16 @@
   {
     z-index:1000;
   }
+  .incremetnal-info {
+    width: 100%;
+    height: 100px;
+    background-color: green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction:row;
+    font-size:15px;
+  }
   /*mobile*/
   @media (max-width: 600px) {
     .containeree {
