--- a/css/home.css
+++ b/css/home.css
@@ -72,10 +72,12 @@
     justify-content:space-evenly;
     color: #F7CF06;
     flex-direction:row;
-    font-size:15px;
-   
+    
   }
-
+  .incremetnal-info p{
+    font-size:35px;
+    font-weight:600;
+  }
   /*mobile*/
   @media (max-width: 600px) {
     .containeree {
@@ -108,6 +110,10 @@
       height: 230px;
       margin: 25px;
     }
+    .incremetnal-info p{
+      font-size:25px;
+      font-weight:400;
+    }
   }
   /*tablet*/
   @media (min-width: 601px) and (max-width: 800px) {
@@ -133,5 +139,9 @@
     }
     .info-card {
       display: none;
+    }
+    .incremetnal-info
+    {
+      font-size:10px;
     }
   }
