--- a/css/home.css
+++ b/css/home.css
@@ -73,32 +73,37 @@
 }
 /* services */
 .service {
-  height:auto;
+  height: auto;
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-  margin-top:25px;
+  justify-content: space-evenly; 
+   margin: 25px 0px;
+   flex-wrap:wrap;
 }
 .main-service-card {
-  height:60vh;
+  height: 60vh;
   width: 20%;
-  display:flex;
-  flex-direction:column;
-  justify-content:space-between;
+  min-width:250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* flex: 1 1 250px; */
 }
-.service-line
-{
-  height:10px;
-  width:100%;
-  background-color:pink;
-  
+.service-line {
+  height: 10px;
+  width: 100%;
+  background-color: pink;
 }
-.service-card
-{
-  width:100%;
-  height:90%;
-  background-color:blue;
+.service-card {
+  width: 100%;
+  height: 90%;
+  background-color: blue;
+}
+.projects {
+  width: 100%;
+  height: 100px;
+  background-color: red;
 }
 /*mobile*/
 @media (max-width: 600px) {
@@ -136,6 +141,11 @@
     font-size: 25px;
     font-weight: 400;
   }
+  .main-service-card
+  {
+    margin:20px 0px;
+    min-width:350px;
+  }
 }
 /*tablet*/
 @media (min-width: 601px) and (max-width: 800px) {
@@ -150,6 +160,10 @@
   }
   .about-poster {
     width: 100%;
+  }
+  .main-service-card
+  {
+    margin:20px 0px;
   }
 }
 @media (min-width: 801px) and (max-width: 2000px) {
