--- a/css/home.css
+++ b/css/home.css
@@ -99,6 +99,14 @@
   width: 100%;
   height: 90%;
   background-color:#f7ab06e5;
+  display:flex;
+  justify-content:center;
+  text-align:center;
+}
+.service-card img 
+{
+  margin-top:10px;
+  height:100px;
 }
 .projects {
   width: 100%;
@@ -165,6 +173,10 @@
   {
     margin:20px 0px;
   }
+  .main-service-card
+  {
+    min-width:300px;
+  }
 }
 @media (min-width: 801px) and (max-width: 2000px) {
   .about-poster {
@@ -178,5 +190,9 @@
   }
   .incremetnal-info {
     font-size: 10px;
+  }
+  .main-service-card
+  {
+    margin:20px 0px;
   }
 }
