srvice heading added

--- a/css/home.css
+++ b/css/home.css
@@ -72,6 +72,11 @@
   font-weight: 600;
 }
 /* services */
+.service-heading
+{
+  margin-top:25px;
+  text-align:center;
+}
 .service {
   height: auto;
   width: 100%;
