more service button added

--- a/css/home.css
+++ b/css/home.css
@@ -86,6 +86,11 @@
    margin: 25px 0px;
    flex-wrap:wrap;
 }
+.service-info
+{
+  text-align:center;
+  margin:0px 200px;
+}
 .main-service-card {
   height: 62vh;
   width: 20%;
@@ -128,6 +133,23 @@ transition:all 0.3s;
 .service-button:hover{
   color:black;
   box-shadow:0 0 2px 2px rgba(0, 0, 0, 0.269);
+}
+.more-service-btn
+{
+  text-align:center;
+}
+.more-service-btn button
+{
+  text-align:center;
+  margin-bottom:25px;
+  border:none;
+  border-radius:5px;
+  height:40px;
+  width:200px;
+  font-weight:600;
+  color:white;
+  font-size:22px;
+  background-color:#f7ab06e5;
 }
 .projects {
   width: 100%;
