--- a/css/home.css
+++ b/css/home.css
@@ -21,28 +21,7 @@
   position: relative;
   z-index: 2;
 }
-.about-img {
-  opacity: 0;
-  transform: translateX(-100%);
-  animation: slideIn 1s ease-out forwards;
-}
-@keyframes slideIn {
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-#about-img-2 {
-  opacity: 0;
-  transform: translateX(100%);
-  animation: slideIn-2 1s ease-out forwards;
-}
-@keyframes slideIn-2 {
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
+
 .about-img img {
   height: 275px;
 }
@@ -66,6 +45,7 @@
   justify-content: space-evenly;
   color: #f7cf06;
   flex-direction: row;
+  margin-top:10px;
 }
 .incremetnal-info p {
   font-size: 35px;
