--- a/css/home.css
+++ b/css/home.css
@@ -45,14 +45,14 @@
   justify-content: space-evenly;
   color: #f7cf06;
   flex-direction: row;
-  margin-top:10px;
+  margin-top: 10px;
 }
 .incremetnal-info p {
   font-size: 35px;
   font-weight: 600;
-  text-decoration:underline;
-  text-decoration-thickness:3px;
-  text-underline-offset:20px;
+  text-decoration: underline;
+  text-decoration-thickness: 3px;
+  text-underline-offset: 20px;
 }
 span {
   color: white;
@@ -137,6 +137,61 @@ span {
   background-color: rgba(0, 0, 0, 0.479);
   color: #f7ab06e5;
 }
+/* scrolling cards*/
+.mb-3
+{
+  text-align:center;
+}
+.scroll-container {
+  position: relative;
+}
+
+.scrolling-wrapper {
+  display: flex;
+  overflow-x: auto;
+  gap: 1rem;
+  scroll-behavior: smooth;
+  padding: 10px;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.card-custom {
+  flex: 0 0 auto;
+  width: 250px;
+  border-radius: 15px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+.scrolling-wrapper::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+.card-custom:hover {
+  transform: scale(1.05);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.scroll-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  background:#f7ab06e5;
+  border: none;
+  padding: 10px 12px;
+  
+  cursor: pointer;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+}
+
+.scroll-left {
+  left: -10px;
+}
+
+.scroll-right {
+  right: -10px;
+}
 .projects {
   width: 100%;
   height: 100px;
@@ -177,7 +232,7 @@ span {
   .incremetnal-info p {
     font-size: 25px;
     font-weight: 400;
-    text-decoration:none;
+    text-decoration: none;
   }
   .main-service-card {
     margin: 20px 0px;
@@ -202,9 +257,8 @@ span {
   .about-poster {
     width: 100%;
   }
-  .incremetnal-info p
-  {
-    text-decoration:none;
+  .incremetnal-info p {
+    text-decoration: none;
   }
   .main-service-card {
     margin: 20px 0px;
