--- a/css/home.css
+++ b/css/home.css
@@ -149,7 +149,7 @@ span {
 .scrolling-wrapper {
   display: flex;
   overflow-x: auto;
-  gap: 1rem;
+  gap:3rem;
   scroll-behavior: smooth;
   padding: 10px;
   -ms-overflow-style: none;
@@ -158,7 +158,8 @@ span {
 
 .card-custom {
   flex: 0 0 auto;
-  width: 250px;
+  width: 300px;
+  height:60vh;
   border-radius: 15px;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -179,7 +180,6 @@ span {
   background:#f7ab06e5;
   border: none;
   padding: 10px 12px;
-  
   cursor: pointer;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   border-radius: 50%;
