--- a/css/home.css
+++ b/css/home.css
@@ -148,7 +148,7 @@ span {
 .scrolling-wrapper {
   display: flex;
   overflow-x: auto;
-  gap: 3rem;
+  gap:80px;
   scroll-behavior: smooth;
   padding: 10px;
   -ms-overflow-style: none;
@@ -158,7 +158,7 @@ span {
 .card-custom {
   flex: 0 0 auto;
   width: 300px;
-  height:67vh;
+  height:auto;
   border-radius: 15px;
   display: flex;
   align-items: center;
@@ -197,7 +197,6 @@ span {
   height: 100%;
   text-align: center;
 }
-
 .project-image img {
   width:300px;
   border-radius:3px;
