--- a/css/home.css
+++ b/css/home.css
@@ -244,21 +244,28 @@ span {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 95%;
+    width:100%;
   }
+ 
   .info-card {
-    height: 100%;
-    width: 90%;
+    height:100%;
+    width:100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    flex-wrap:wrap;
+  }
+  .info-card td 
+  {
+    
+    
   }
   .about {
     height: auto;
   }
   .phn-about-img {
-    height: 230px;
+    height: 200px;
     margin: 25px;
   }
   .incremetnal-info p {
@@ -315,7 +322,24 @@ span {
     top: 50%;
     right: -80px;
   }
+  .scroll-button {
+    display: none;
+  }
 }
+@media (min-width: 801px) and (max-width:900px)
+{
+  .scroll-left {
+    position: absolute;
+    top: 50%;
+    left: -50px;
+  }
+  .scroll-right {
+    position: absolute;
+    top: 50%;
+    right: -50px;
+  }
+}  
+
 @media (min-width: 801px) and (max-width: 2000px) {
   .about-poster {
     width: 95%;
