--- a/css/style.css
+++ b/css/style.css
@@ -1,142 +1,169 @@
 body {
-    margin: 0;
-    padding: 0;
-  }
-  *::selection {
-    background: rgb(247, 207, 6);
-    color: black;
-  }
-  .header {
-    width: 100%;
+  margin: 0;
+  padding: 0;
+}
+*::selection {
+  background: rgb(247, 207, 6);
+  color: black;
+}
+.header {
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  z-index: 100;
+}
+.header-1 {
+  width: 100%;
+  height: 55px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+.logo {
+  height: 100%;
+  display: block;
+  margin-right: auto;
+  margin-left: 25px;
+  position: relative;
+  top: 10px;
+  margin-bottom: 3px;
+}
+.logo-1 {
+  height: 55px;
+}
+.logo-2 {
+  height: 35px;
+}
+.header-1-info {
+  display: flex;
+  gap: 50px;
+  margin-right: 25px;
+}
+.header-1-info img {
+  height: 20px;
+  margin: 10px;
+}
+.line {
+  height: 30px;
+  width: 5px;
+  background-color: rgb(247, 207, 6);
+  border-radius: 5px;
+}
+strong {
+  cursor: pointer;
+  transition: all ease 0.3s;
+}
+strong:hover {
+  color: rgb(247, 207, 6);
+}
+.header-2 {
+  width: 100%;
+  height: 45px;
+  background-color: rgb(247, 207, 6);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.navbar {
+  display: flex;
+  align-items: center;
+}
+.navbar ul {
+  display: flex;
+  gap: 10vw;
+}
+#hamburger-menu {
+  height: 35px;
+  margin-left: 25px;
+}
+.navbar li {
+  display: flex;
+  padding-top: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.navbar li:hover {
+  font-weight: 600;
+  color: black;
+}
+.containeree {
+  width: 100%;
+  margin-top: 100px;
+}
+.carousel-inner img {
+  height: 100vh;
+  object-fit: cover;
+}
+/*mobile*/
+@media (max-width: 600px) {
+  #hamburger-menu {
     position: fixed;
-    top: 0px;
-    z-index: 100;
+    left: 0px;
   }
-  .header-1 {
+  .line {
+    height: 3px;
     width: 100%;
-    height: 55px;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content:end;
-  }
-  .header-1-info {
-    display: flex;
-    gap: 50px;
-    margin-right: 25px;
   }
   .header-1-info img {
-    height: 20px;
-    margin: 10px;
+    height: 15px;
+    margin: 5px;
   }
-  .line{
-    height:30px;
-    width:5px;
-    background-color: rgb(247, 207, 6);
-    border-radius:5px;
-  }
-  strong
-  {
-    cursor:pointer;
-    transition:all ease 0.3s;
-  }
-  strong:hover{
-    color: rgb(247, 207, 6);
+  .header-1-info {
+    flex-direction: column;
+    gap: 0px;
+    font-size: 10px;
   }
   .header-2 {
-    width: 100%;
-    height: 45px;
-    background-color: rgb(247, 207, 6);
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: none;
+    height: 100%;
+    width: 35%;
+    margin-right: 0 auto;
+    z-index: 1000;
   }
   .navbar {
     display: flex;
-    align-items: center;
+    justify-content: center;
+    height: 1024px;
   }
   .navbar ul {
     display: flex;
-    gap: 10vw;
+    flex-direction: column;
+    gap: 20vh;
+    margin-top: 25px;
+  }
+  .logo
+  {
+    margin-left:100px;
+  }
+  .logo-1 {
+    height:45px;
+  }
+  .logo-2 {
+    height: 25px;
+  }
+}
+/*tablet*/
+@media (min-width: 601px) and (max-width: 800px) {
+  .navbar ul {
+    gap: 5vw;
+    display: flex !important;
   }
   #hamburger-menu {
+    display: none;
+  }
+  .logo-1 {
+    height:55px;
+  }
+  .logo-2 {
     height: 35px;
-    margin-left: 25px;
   }
-  .navbar li {
-    display: flex;
-    padding-top: 10px;
-    font-size: 20px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  .navbar li:hover {
-    font-weight: 600;
-    color: black;
-  }
-  .containeree {
-    width: 100%;
-    margin-top: 100px;
-  }
-  .carousel-inner img {
-    height: 100vh; 
-    object-fit: cover; 
-  }
-   /*mobile*/
-   @media (max-width: 600px) {
-    #hamburger-menu
-    {
-        position:fixed;
-        left:0px;
-    }
-    .line
-    {
-        height:3px;
-        width:100%;
-    }
-    .header-1-info img {
-        height: 15px;
-        margin:5px;
-      }
-    .header-1-info
-    {
-        flex-direction:column;
-        gap:0px;
-        font-size:10px;
-    }
-    .header-2 {
-      display: none;
-      height: 100%;
-      width: 35%;
-      margin-right: 0 auto;
-      z-index: 1000;
-    }
-    .navbar {
-      display: flex;
-      justify-content: center;
-      height: 1024px;
-    }
-    .navbar ul {
-      display: flex;
-      flex-direction: column;
-      gap: 20vh;
-      margin-top: 25px;
-    }
-}
- /*tablet*/
- @media (min-width: 601px) and (max-width: 800px) {
-    .navbar ul {
-      gap: 5vw;
-      display: flex !important;
-    }
-    #hamburger-menu {
-      display: none;
-    }
 }
 @media (min-width: 801px) and (max-width: 2000px) {
-    #hamburger-menu {
-      display: none;
-    }
+  #hamburger-menu {
+    display: none;
+  }
 }
