--- a/css/home.css
+++ b/css/home.css
@@ -20,40 +20,39 @@
   color: black;
   position: relative;
   z-index: 2;
-  margin-bottom:5px;
+  margin-bottom: 5px;
   /* background-image:linear-gradient(green, blue); */
-  
 }
-.underline
-{
-  height:5px;
-  width:180px;
-  display:flex;
-  flex-direction:row;
-  margin:0 auto;
-  justify-content:space-between;
-  flex-wrap:nowrap;
+.underline {
+  height: 5px;
+  width: 180px;
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  gap: 5px;
+  justify-content: space-between;
+  flex-wrap: nowrap;
 }
-.underline-1
-{
-  height:5px;
-  width:10px;
-  background-color:black;
-  margin:0 auto;
+.underline-1 {
+  height: 4px;
+  width: 10px;
+  background-color: rgba(247, 207, 6, 0.966);
+  margin: 0 auto;
+  border-radius: 5px;
 }
-.underline-2
-{
-  height:5px;
-  width:150px;
-  margin:0 auto;
-  background-color:red;
+.underline-2 {
+  height: 4px;
+  width: 150px;
+  margin: 0 auto;
+  background-color: rgba(0, 0, 0, 0.776);
+  border-radius: 5px;
 }
-.underline-3
-{
-  height:5px;
-  width:10px;
-  background-color:black;
-  margin:0 auto;
+.underline-3 {
+  height: 4px;
+  width: 10px;
+  background-color: rgba(247, 207, 6, 0.966);
+  margin: 0 auto;
+  border-radius: 5px;
 }
 .about-img img {
   height: 275px;
@@ -181,7 +180,7 @@ span {
 .scrolling-wrapper {
   display: flex;
   overflow-x: auto;
-  gap:80px;
+  gap: 80px;
   scroll-behavior: smooth;
   padding: 10px;
   -ms-overflow-style: none;
@@ -191,7 +190,7 @@ span {
 .card-custom {
   flex: 0 0 auto;
   width: 300px;
-  height:auto;
+  height: auto;
   border-radius: 15px;
   display: flex;
   align-items: center;
@@ -210,30 +209,29 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
 }
-.project-link a
-{
-  position:absolute;
-  right:8px;
-  bottom:0px;
-  text-decoration:none;
-  color:#f7ab06e5;
+.project-link a {
+  position: absolute;
+  right: 8px;
+  bottom: 0px;
+  text-decoration: none;
+  color: #f7ab06e5;
 }
-.project-link a:hover{
+.project-link a:hover {
   color: #f7ab06;
-  text-decoration:none;
+  text-decoration: none;
 }
 .project-body {
   display: flex;
   flex-direction: column;
-  gap:18px;
+  gap: 18px;
   height: 100%;
   text-align: center;
 }
 .project-image img {
-  width:300px;
-  border-radius:3px;
+  width: 300px;
+  border-radius: 3px;
 }
 
 .scroll-button {
@@ -277,17 +275,17 @@ span {
     display: flex;
     align-items: center;
     justify-content: center;
-    width:100%;
+    width: 100%;
   }
- 
+
   .info-card {
-    height:100%;
-    width:100%;
+    height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
   }
   .about {
     height: auto;
@@ -313,12 +311,10 @@ span {
     display: none;
   }
 }
-@media (max-wdith:350px)
-{
-  .info-card 
-  {
-    flex-wrap:wrap;
-    font-size:10px;
+@media (max-wdith: 350px) {
+  .info-card {
+    flex-wrap: wrap;
+    font-size: 10px;
   }
 }
 /*tablet*/
@@ -362,8 +358,7 @@ span {
     display: none;
   }
 }
-@media (min-width: 801px) and (max-width:900px)
-{
+@media (min-width: 801px) and (max-width: 900px) {
   .scroll-left {
     position: absolute;
     top: 50%;
@@ -374,7 +369,7 @@ span {
     top: 50%;
     right: -50px;
   }
-}  
+}
 
 @media (min-width: 801px) and (max-width: 2000px) {
   .about-poster {
