--- a/css/home.css
+++ b/css/home.css
@@ -255,7 +255,15 @@ span {
   top: 50%;
   right: -100px;
 }
-.projects {
+.morden-construction-poster
+{
+  width: 100%;
+  height: 150px;
+  background-image: url("./../images/constrction-engineerie-communication.jpg");
+  background-position: center;
+  background-size: cover;
+}
+.footer {
   width: 100%;
   height: 100px;
   background-color: red;
