--- a/css/home.css
+++ b/css/home.css
@@ -271,18 +271,19 @@ span {
   
 }.articles{
   width:100%;
-  height:50vh;
+  height:inherit;
   background-color:green;
   display:flex;
   align-items:center;
   justify-content:space-evenly;
-  
+  flex-wrap:wrap;  
+  gap:30px;
 }
 .article-body
 {
   border:2px solid black;
-  height:100%;
-  width:20%;
+  height:50vh;
+  min-width:280px;
 }
 .footer {
   width: 100%;
