--- a/css/home.css
+++ b/css/home.css
@@ -268,27 +268,32 @@ span {
 }
 .morden-construction-poster span {
   color: #efc809;
-  
-}.articles{
-  width:100%;
-  height:inherit;
-  background-color:green;
-  display:flex;
-  align-items:center;
-  justify-content:space-evenly;
-  flex-wrap:wrap;  
-  gap:30px;
 }
-.article-body
-{
-  border:2px solid black;
-  height:50vh;
-  min-width:280px;
+.articles {
+  width: 100%;
+  height: inherit;
+}
+.article-container {
+  width: 100%;
+  height: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap:30px;
+  margin-top:50px;
+  
+}
+.article-body {
+  border: 2px solid black;
+  height: 50vh;
+  min-width: 280px;
 }
 .footer {
   width: 100%;
   height: 100px;
   background-color: red;
+  margin-top:50px;
 }
 /*mobile*/
 @media (max-width: 600px) {
@@ -340,13 +345,11 @@ span {
   .scroll-button {
     display: none;
   }
-  .quality-heading h1
-  {
-    font-size:22px;
+  .quality-heading h1 {
+    font-size: 22px;
   }
-  .quality-heading
-  {
-    font-size:18px;
+  .quality-heading {
+    font-size: 18px;
   }
 }
 @media (max-wdith: 350px) {
