--- a/css/home.css
+++ b/css/home.css
@@ -287,7 +287,7 @@ span {
 .article-body {
   border: 2px solid black;
   height: 50vh;
-  min-width: 280px;
+  min-width: 300px;
 }
 .footer {
   width: 100%;
@@ -351,11 +351,17 @@ span {
   .quality-heading {
     font-size: 18px;
   }
+  .article-body {
+    min-width: 350px;
+  }
 }
 @media (max-wdith: 350px) {
   .info-card {
     flex-wrap: wrap;
     font-size: 10px;
+  }
+  .article-body {
+    min-width:250px;
   }
 }
 /*tablet*/
