--- a/css/home.css
+++ b/css/home.css
@@ -280,46 +280,60 @@ span {
   align-items: center;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  gap:30px;
-  margin-top:50px;
-  
+  gap: 30px;
+  margin-top: 50px;
 }
 .article-body {
   border: 2px solid black;
-  height:60vh;
+  height: inherit;
   min-width: 300px;
-  max-width:300px;
-  display:flex;
-  align-items:center;
- justify-content:space-between;
- flex-direction:column;
- flex-wrap:wrap;
- text-align:center;
- gap:7px;
+  max-width: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  flex-wrap: wrap;
+  text-align: center;
+  gap: 20px;
 }
-.article-img img
-{
-  height:100px;
-  width:100%;
+.article-img img {
+  height: 100px;
+  width: 100%;
 }
-.article-date
-{
-  display:flex;
-  flex-direction:row;
+.article-date {
+  display: flex;
+  flex-direction: row;
 }
-.article-date img
-{
-height:25px;
-margin-right:10px;
+.article-date img {
+  height: 25px;
+  margin-right: 10px;
 }
-.article-body button{
-  margin-top:3px;
+.read-more-article-btn {
+  position: relative;
+  bottom: 0px;
+}
+.read-more-article-btn button{
+  text-align: center;
+  margin-bottom: 25px;
+  border: none;
+  border-radius: 5px;
+  height:35px;
+  width:150px;
+  font-weight: 600;
+  color: white;
+  font-size: 22px;
+  background-color: #f7ab06e5;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.read-more-article-btn button:hover{
+  
 }
 .footer {
   width: 100%;
   height: 100px;
   background-color: red;
-  margin-top:50px;
+  margin-top: 50px;
 }
 /*mobile*/
 @media (max-width: 600px) {
@@ -387,7 +401,7 @@ margin-right:10px;
     font-size: 10px;
   }
   .article-body {
-    min-width:250px;
+    min-width: 250px;
   }
 }
 /*tablet*/
