--- a/css/home.css
+++ b/css/home.css
@@ -312,13 +312,13 @@ span {
   position: relative;
   bottom: 0px;
 }
-.read-more-article-btn button{
+.read-more-article-btn button {
   text-align: center;
   margin-bottom: 25px;
   border: none;
   border-radius: 5px;
-  height:35px;
-  width:150px;
+  height: 35px;
+  width: 150px;
   font-weight: 600;
   color: white;
   font-size: 22px;
@@ -326,8 +326,9 @@ span {
   cursor: pointer;
   transition: all 0.3s;
 }
-.read-more-article-btn button:hover{
-  
+.read-more-article-btn button:hover {
+  color: black;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.269);
 }
 .footer {
   width: 100%;
