--- a/css/home.css
+++ b/css/home.css
@@ -103,8 +103,8 @@ span {
   flex-wrap: wrap;
 }
 .service-info {
-  text-align: center;
-  margin: 0px 200px;
+
+  margin:25px 150px;
 }
 .main-service-card {
   height: 62vh;
@@ -210,6 +210,10 @@ span {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+}
+.project-info
+{
+  margin:25px 0;
 }
 .project-link a {
   position: absolute;
@@ -330,12 +334,25 @@ span {
   color: black;
   box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.269);
 }
+.artical-info
+{   
+  text-align: center;
+ margin:25px 150px;
+  
+}
+.partners
+{
+  height:100px;
+  width:100%;
+  background-color:#db9703;
+}
 .footer {
   width: 100%;
   height: 100px;
   background-color: red;
   margin-top: 50px;
 }
+
 /*mobile*/
 @media (max-width: 600px) {
   .containeree {
@@ -379,10 +396,6 @@ span {
     margin: 20px 0px;
     min-width: 350px;
   }
-  .service-info {
-    text-align: center;
-    margin: 0px 50px;
-  }
   .scroll-button {
     display: none;
   }
@@ -394,6 +407,14 @@ span {
   }
   .article-body {
     min-width: 350px;
+  }
+  .service-info {
+
+    margin:25px 10px;
+  }
+  .artical-info
+  {
+    margin:25px 10px;
   }
 }
 @media (max-wdith: 350px) {
@@ -428,10 +449,6 @@ span {
   .main-service-card {
     min-width: 300px;
   }
-  .service-info {
-    text-align: center;
-    margin: 0px 90px;
-  }
   .scroll-left {
     position: absolute;
     top: 50%;
@@ -445,7 +462,14 @@ span {
   .scroll-button {
     display: none;
   }
-}
+  .service-info {
+
+    margin:25px 50px;
+  }
+  .artical-info
+{
+  margin: 25px 50px;
+}}
 @media (min-width: 801px) and (max-width: 900px) {
   .scroll-left {
     position: absolute;
@@ -484,9 +508,5 @@ span {
     font-size: 18px;
     font-weight: 400;
     color: #db9703;
-  }
-  .service-info {
-    text-align: center;
-    margin: 0px 200px;
   }
 }
