--- a/css/home.css
+++ b/css/home.css
@@ -103,8 +103,7 @@ span {
   flex-wrap: wrap;
 }
 .service-info {
-
-  margin:25px 150px;
+  margin: 25px 150px;
 }
 .main-service-card {
   height: 62vh;
@@ -211,9 +210,8 @@ span {
   align-items: center;
   flex-wrap: wrap;
 }
-.project-info
-{
-  margin:25px 0;
+.project-info {
+  margin: 25px 0;
 }
 .project-link a {
   position: absolute;
@@ -300,7 +298,7 @@ span {
   gap: 20px;
 }
 .article-img img {
-  height:200px;
+  height: 200px;
   width: 100%;
   box-shadow: 0pc 0px 2px 2px rgba(0, 0, 0, 0.171);
 }
@@ -334,23 +332,45 @@ span {
   color: black;
   box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.269);
 }
-.artical-info
-{   
+.artical-info {
   text-align: center;
- margin:25px 150px;
-  
+  margin: 25px 150px;
 }
-.partners
-{
-  height:100px;
-  width:100%;
-  background-color:#db9703;
+.image-loop-container {
+  height:150px;
+  width: 100%;
+  background-color: #db9703;
+  margin-top: 10px;
+}
+.image-loop-container {
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.image-strip {
+  display: inline-block;
+  animation: scrollLoop 20s linear infinite;
+}
+
+.image-strip img {
+  width: 200px;
+  height: auto;
+  margin-right: 20px;
+  display: inline-block;
+}
+
+@keyframes scrollLoop {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
 }
 .footer {
   width: 100%;
   height: 100px;
   background-color: red;
-  margin-top: 50px;
 }
 
 /*mobile*/
@@ -409,12 +429,10 @@ span {
     min-width: 350px;
   }
   .service-info {
-
-    margin:25px 10px;
+    margin: 25px 10px;
   }
-  .artical-info
-  {
-    margin:25px 10px;
+  .artical-info {
+    margin: 25px 10px;
   }
 }
 @media (max-wdith: 350px) {
@@ -463,13 +481,12 @@ span {
     display: none;
   }
   .service-info {
-
-    margin:25px 50px;
+    margin: 25px 50px;
   }
-  .artical-info
-{
-  margin: 25px 50px;
-}}
+  .artical-info {
+    margin: 25px 50px;
+  }
+}
 @media (min-width: 801px) and (max-width: 900px) {
   .scroll-left {
     position: absolute;
