get in touch section aded

--- a/css/home.css
+++ b/css/home.css
@@ -369,7 +369,7 @@ span {
     transform: translateX(-50%);
   }
 }
-.footer {
+.get-in-touch {
   width: 100%;
   height: 100px;
   background-color: red;
