--- a/css/home.css
+++ b/css/home.css
@@ -255,7 +255,7 @@ span {
 .scroll-right {
   position: absolute;
   top: 50%;
-  right: -100px;
+  right: -50px;
 }
 .morden-construction-poster {
   width: 100%;
@@ -339,7 +339,7 @@ span {
 
 /* image loop code */
 .image-loop-container {
-  height:150px;
+  height: 150px;
   width: 100%;
   margin-top: 10px;
 }
@@ -354,11 +354,11 @@ span {
 }
 
 .image-strip img {
-  width:150px;
+  width: 150px;
   height: auto;
   margin-right: 20px;
   display: inline-block;
-  margin:0 55px;
+  margin: 0 55px;
 }
 
 @keyframes scrollLoop {
@@ -371,41 +371,49 @@ span {
 }
 .get-in-touch {
   width: 100%;
-  height:100vh;
-  background-image:url("./../images/building.jpg");
+  height: 100vh;
+  background-image: url("./../images/building.jpg");
   background-position: center;
-  background-size:cover;
+  background-size: cover;
 }
-.get-in-touch h1
-{
-  text-align:center;
-  color:white;
+.get-in-touch h1 {
+  text-align: center;
+  color: white;
 }
-.contact-heading
-{
-  position:absolute;
-  top:0px;
+.contact-heading {
+  position: absolute;
+  top: 0px;
 }
-.get-in-touch
-{
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  flex-direction:column;
+.get-in-touch {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   position: relative;
 }
-.get-in-touch-form
-{
-  display:flex;
-  flex-direction:row;
-  justify-content:space-evenly;
-  padding:100px;
+.get-in-touch-form {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-evenly;
 }
-.footer
-{
-  background-color:green;
-  height:100px;
-  width:100%;
+.get-in-touch-form input {
+  border: none;
+  border-radius: 5px;
+  margin: 50px;
+  height: 50px;
+  width: 250px;
+}
+textarea {
+  height: 350px;
+  width: 70%;
+  border: none;
+}
+.footer {
+  background-color: green;
+  height: 100px;
+  width: 100%;
 }
 /*mobile*/
 @media (max-width: 600px) {
@@ -450,6 +458,9 @@ span {
     margin: 20px 0px;
     min-width: 350px;
   }
+  .project-body {
+    gap: 5px;
+  }
   .scroll-button {
     display: none;
   }
@@ -468,9 +479,25 @@ span {
   .artical-info {
     margin: 25px 10px;
   }
-  .image-strip img
+  .image-strip img {
+    margin: 0 40px;
+  }
+  .get-in-touch
   {
-    margin:0 40px;
+    height:80vh;
+  }
+  textarea {
+    height: 250px;
+  }
+  .get-in-touch-form
+  {
+    display:flex;
+    flex-direction:row;
+  }
+  .get-in-touch-form input {
+    margin:10px;
+    height: 35px;
+    width:150px;
   }
 }
 @media (max-wdith: 350px) {
@@ -481,9 +508,17 @@ span {
   .article-body {
     min-width: 250px;
   }
-  .image-strip img
+  .image-strip img {
+    margin: 0 30px;
+  }
+  .get-in-touch-form input {
+    height: 10px;
+    width: 20px; 
+  }
+  .get-in-touch-form
   {
-    margin:0 30px;
+    display:flex;
+    flex-direction:column;
   }
 }
 /*tablet*/
@@ -528,6 +563,15 @@ span {
   .artical-info {
     margin: 25px 50px;
   }
+  .get-in-touch-form input {
+    margin: 35px;
+    height: 35px;
+    width:150px;
+  }
+  .get-in-touch-form
+  {
+    flex-direction:column;
+  }
 }
 @media (min-width: 801px) and (max-width: 900px) {
   .scroll-left {
@@ -539,6 +583,11 @@ span {
     position: absolute;
     top: 50%;
     right: -50px;
+  }
+  .get-in-touch-form input {
+    margin: 35px;
+    height: 35px;
+    width: 200px;
   }
 }
 
