margin change for send button on mobile screen

--- a/css/home.css
+++ b/css/home.css
@@ -511,6 +511,10 @@ textarea {
   {
     display:none;
   }
+  .send-btn
+  {
+    margin-top:10px;
+  }
 }
 @media (max-wdith: 350px) {
   .info-card {
