footer color changed

--- a/css/home.css
+++ b/css/home.css
@@ -422,7 +422,7 @@ textarea {
   border-radius:5px;
 }
 .footer {
-  background: rgb(247, 207, 6);
+ background-color:white;
   height:30vh;
   width: 100%;
 }
