--- a/css/home.css
+++ b/css/home.css
@@ -425,6 +425,20 @@ textarea {
  background-color:white;
   height:30vh;
   width: 100%;
+  display:flex;
+  flex-direction:row;
+  align-items:center;
+  justify-content:space-evenly;
+}
+.footer-logo
+{
+  display:flex;
+  flex-direction:row;
+  align-items:center;
+  justify-content:center;
+}
+.footer-logo img{
+  height:50px;
 }
 .copyright
 {
