--- a/css/home.css
+++ b/css/home.css
@@ -423,12 +423,13 @@ textarea {
 }
 .footer {
  background-color:white;
-  height:30vh;
-  width: 100%;
+  height:auto;
+  width:100%;
   display:flex;
   flex-direction:row;
   align-items:center;
   justify-content:space-evenly;
+  flex-wrap:wrap;
 }
 .footer-logo
 {
@@ -449,6 +450,8 @@ textarea {
   text-align:center;
   font-size:18px;
   font-weight:600;
+  position:relative;
+  bottom:0px;
 }
 /*mobile*/
 @media (max-width: 600px) {
